--- a/package.json
+++ b/package.json
@@ -6,16 +6,23 @@
     "scripts": {
         "clean": "rm -rf build",
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "webpack",
-        "start": "webpack-dev-server --config webpack.config.dev.js --open"
+        "build": "webpack --env.production",
+        "start": "webpack-dev-server --env.development --open"
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.6.4",
+        "@babel/preset-env": "^7.6.3",
+        "babel-loader": "^8.0.6",
         "css-loader": "^3.2.0",
+        "file-loader": "^4.2.0",
         "html-webpack-plugin": "^3.2.0",
         "open-browser-webpack-plugin": "0.0.5",
         "style-loader": "^1.0.0",
+        "url-loader": "^2.2.0",
+        "vue-loader": "^15.7.2",
+        "vue-template-compiler": "^2.6.10",
         "webpack": "^4.41.2",
         "webpack-cli": "^3.3.10",
         "webpack-dev-server": "^3.9.0"
