--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "@babel/preset-env": "^7.6.3",
         "babel-loader": "^8.0.6",
         "css-loader": "^3.2.0",
+        "eslint": "^6.6.0",
+        "eslint-plugin-vue": "^5.2.3",
         "file-loader": "^4.2.0",
         "html-webpack-plugin": "^3.2.0",
         "open-browser-webpack-plugin": "0.0.5",
@@ -28,6 +30,8 @@
         "webpack-dev-server": "^3.9.0"
     },
     "dependencies": {
-        "vue": "^2.6.10"
+        "vue": "^2.6.10",
+        "vue-router": "^3.1.3",
+        "vuex": "^3.1.1"
     }
 }
